--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,8 +1,9 @@
 // customize some Bootstrap variables
-$primary: darken(#428bca, 20%);
+$primary: #e47908;
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
 body {
-    background-color: $primary;
+    color: white;
+    background-color: #2d4156;
 }
