--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -2,6 +2,10 @@
 {% block title %}Kapcsolatfelvételi űrlap{% endblock %}
 {% block body %}
 
-<h1>Hello world!</h1>
+<div class="container">
+<h1>Kapcsolat</h1>
+<p>Kérdés esetén nyugodtan keresse kollégáinkat a következő űrlap segítségével:</p>
+{{ form(form) }}
+</div>
 
 {% endblock %}
